--- a/XYORAS Pokemon Link Tool/XYORAS Pokemon Link Tool.csproj
+++ b/XYORAS Pokemon Link Tool/XYORAS Pokemon Link Tool.csproj
@@ -54,8 +54,10 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PL6.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
